--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -366,10 +366,10 @@
 \subsubsection{test13}\paragraph{hep}
 \subsubsection{test14}\paragraph{hep}
 
-\specialchap{Remerciements}
+\specialchap{Remerciements} %%% defauts si mis dans un autre fichier avec subfile
 %\chapter{Remerciements}
 %\renewcommand\chaptername{Remerciements}
-\lipsum
+\input{remerciements.tex}
 
 %%\chapter{Conclusion et discussion}
 
