Correction chap analyse hetero + basculement d'images en annexes

--- a/manuscrit_G_LEFEBVRE/annexe_penalisation.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_penalisation.tex
@@ -188,7 +188,7 @@ et son allure est présentée sur la Figure~\ref{fig:regul_para_coupee}.
 %%%%%%%%%%%
 %%%%%%%%%%%
 %%%%%%%%%%%
-\section{Optimisation des niveaux de gris~: essais de diverses pénalisations sur la fonction coût}
+\section{Impact du choix de la pénalisation sur l'optimisation des niveaux de gris} %~: essais de diverses pénalisations sur la fonction coût}
 
 %%%%%% Cout2
 \DTLloaddb{optim2_2grey}{../data/cout_2_bad/optim2.csv}
